syntax = "proto3";

package auth;

option go_package = "github.com/tunvx/simplebank/grpc/pb/auth";

message UpdateCustomerCredentialRequest {
    // int64 customer_id (get from auth token) 
    // and customer can update other fields
    optional int32 shard_id = 1; 
    optional string username = 2;
    optional string password = 3;
}

message UpdateCustomerCredentialResponse {
    bool is_updated = 1;
}